--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 
 .navbar {
-  box-shadow: 0 2px 4px rgba(18,18,18,.1);
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 
   .navbar-brand {
     font-size: 1.5rem;
