--- a/app/views/users/_info_window.html.erb
+++ b/app/views/users/_info_window.html.erb
@@ -1,3 +1,4 @@
+<!--_info-window.html.erb -->
 <div class="card" style="min-width: 280px;">
   <div class="card-body p-3">
     <h5 class="card-title mb-2 text-primary"><%= activity.name %></h5>
