--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,51 @@
-<h2>Sign up</h2>
+<div style="margin-top: 6rem; ">
+  <div class="d-flex flex-column" style="max-width: 600px; width: 100%; margin: auto; padding: 40px; height:100vh">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+    <h2 class="fs-3 pb-2", style="font-weight: 800; color: #121212">Sign up</h2>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+
+      <div class="form-inputs" style="">
+        <div class="form-floating mb-3">
+          <%= f.email_field :email,
+                      class: "form-control",
+                      id: "floatingEmail",
+                      placeholder: "Email",
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "email" }%>
+          <%= f.label :email, "Email", for: "floatingEmail" %>
+        </div>
+
+        <div class="form-floating mb-3">
+          <%= f.password_field :password,
+                        class: "form-control",
+                        id: "floatingPassword",
+                        placeholder: "Password",
+                        required: true,
+                        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                        input_html: { autocomplete: "new-password" } %>
+          <%= f.label :password, "Password", for: "floatingPassword" %>
+        </div>
+
+        <div class="form-floating mb-3">
+          <%= f.password_field :password_confirmation,
+                        class: "form-control",
+                        id: "floatingPasswordConfirmation",
+                        placeholder: "Confirm Password",
+                        required: true,
+                        input_html: { autocomplete: "new-password" } %>
+          <%= f.label :password_confirmation, "Confirm Password", for: "floatingPasswordConfirmation" %>
+        </div>
+
+      <div class="d-flex flex-column align-items-center justify-content-center">
+        <div class="form-actions">
+          <%= f.button :submit, "Sign up", class: "btn btn-secondary rounded-pill archivo mt-5 mb-2", style: "width: 150px; font-weight: 600; font-size:  18px" %>
+
+        </div>
+        <%= render "devise/shared/links" %>
+      </div>
+    <% end %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
