--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -8,6 +8,6 @@
 .btn-secondary:hover {
   background-color: rgb(61, 67, 31) !important; // hover color
   color: #fff !important;
-  border-color: #rgb(61, 67, 31) !important;
+  border-color: rgb(61, 67, 31) !important;
   transform: translateY(-2px) !important;
 }
