--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -9,12 +9,12 @@
   border-radius: 5px;
 }
 
-.bg-green { background-color: #008000 !important; color: white; }
-.bg-pink { background-color: rgb(239, 134, 216) !important; color: white; }
+.bg-green { background-color: #0b6d0b !important; color: white; }
+.bg-pink { background-color: rgb(222, 98, 195) !important; color: white; }
 .bg-blue { background-color: rgb(24, 103, 181) !important; color: white; }
-.bg-yellow { background-color: rgb(253, 253, 97) !important; color: black; }
-.bg-orange { background-color: rgb(213, 120, 13) !important; color: white; }
-.bg-brown { background-color: rgb(121, 66, 34) !important; color: white; }
+.bg-yellow { background-color: rgb(60, 151, 98) !important; color: white }
+.bg-orange { background-color: rgb(183, 98, 2) !important; color: white; }
+.bg-brown { background-color: rgb(116, 64, 34) !important; color: white; }
 .bg-purple { background-color: rgb(91, 25, 111) !important; color: white; }
 .bg-red { background-color: rgb(168, 6, 6) !important; color: white; }
-.bg-gold { background-color: rgb(207, 176, 0) !important; color: black; }
+.bg-gold { background-color: rgb(207, 176, 0) !important; color: black !important; }
