fix: rubocop -A to correct some files, plus seedfile final form.

--- a/app/views/users/_info_box.html.erb
+++ b/app/views/users/_info_box.html.erb
@@ -1,6 +1,8 @@
 <!-- app/views/users/_info_box.html.erb -->
 <div class="user-info">
   <h5><%= user.username %></h5>
+  <p>Activities done: <%= trips.sum { |t| t.activities.count } %></p>
+  <p>Places visited: <%= trips.map(&:location).uniq.count %></p>
   <p>Trips: <%= trips.count %></p>
   <p>Reviews: <%= user.activity_reviews.count %></p>
   <p>Level: <%= user.level %></p>
