--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,27 +1,3 @@
-<nav class="navbar px-3 py-2 archivo-black">
-  <div class="d-flex justify-content-between align-items-center w-100">
-    <!-- Left side: Logo + Search + Links -->
-    <div class="d-flex align-items-center gap-3">
-      <h1>
-      Plan & Go
-      </h1>
-    </div>
-
-    <!-- Right side: Account dropdown or Log In -->
-    <% if user_signed_in? %>
-
-        <button class="btn btn-secondary dropdown-toggle" style="background:none;border:none;cursor:pointer;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Account
-        </button>
-
-      </div>
-    <% else %>
-      <%= link_to "Log In", new_user_session_path, class: "text-style" %>
-    <% end %>
-  </div>
-</nav>
-
-
 <nav class="navbar bg-body-tertiary fixed-top px-3 py-2 archivo-black">
   <div class="container-fluid">
     <!-- Brand/Logo Section -->
@@ -37,7 +13,7 @@
       <% if user_signed_in? %>
         <div class="dropdown">
           <button class="btn btn-link navbar-toggler archivo-black text-decoration-none" 
-                  style="background:none;border:none;cursor:pointer;color:inherit;" 
+                  style="background:none;border:none;cursor:pointer;color:black;opacity:1;" 
                   type="button" data-bs-toggle="offcanvas" aria-expanded="false"
                   data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"> </span>
@@ -50,7 +26,8 @@
             <li><hr class="dropdown-divider"></li>
             <li><%= link_to "Log Out", destroy_user_session_path, 
                     class: "dropdown-item text-style", 
-                    data: { turbo_method: :delete } %></li>
+                    data: { turbo_method: :delete } %>
+            </li>
           </ul>
         </div>
       <% else %>
@@ -59,52 +36,43 @@
     </div>
 
     <button class="navbar-toggler d-lg-none" type="button" 
-            data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" 
-            aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+        data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" 
+        aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
 
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" 
-         aria-labelledby="offcanvasNavbarLabel">
-      <div class="offcanvas-header">
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-
-        <ul class="navbar-nav justify-content-end flex-grow-1 pe-2">
-        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <% if user_signed_in? %>
-            <li class="nav-item">
-              <%= link_to "My Profile", user_path(current_user), class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Plan a Trip - Trip Planner", root_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Search", "#", class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Trip preferences", "#", class: "nav-link" %>
-            </li>
-            
-            <li class="nav-item mt-3">
-              <%= link_to "Log Out", destroy_user_session_path, 
-                  class: "nav-link text-secondary", 
-                  data: { turbo_method: :delete } %>
-            </li>
-          <% else %>
-            <li class="nav-item">
-              <%= link_to "Log In", new_user_session_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" 
+     aria-labelledby="offcanvasNavbarLabel">
+  <div class="offcanvas-header justify-content-end">
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  
+  <div class="offcanvas-body pt-0">
+    <!-- Inline navigation links at the top -->
+    <div class="d-flex flex-wrap justify-content-start gap-5 mb-2 border-bottom pb-3">
+      <ul style="list-style-type: none;"><% if user_signed_in? %>
+        <li><%= link_to "My Profile", user_path(current_user), class: "nav-link-inline p-0 mb-9" %></li>
+        <li><%= link_to "Plan your Trip", root_path, class: "nav-link-inline p-0" %></li>
+        <li><%= link_to "Search", users_path, class: "nav-link-inline p-0" %></li>
+        <li><%= link_to "My Preferences", onboarding_interests_path , class: "nav-link-inline p-0" %></li>
+      <% else %>
+        <%= link_to "Home", root_path, class: "nav-link-inline p-0" %>
+        <%= link_to "Log In", new_user_session_path, class: "nav-link-inline p-0" %>
+        <%= link_to "Sign Up", new_user_registration_path, class: "nav-link-inline p-0" %>
+      <% end %>
+      </ul>
     </div>
+    
+    <!-- Logout section (for signed-in users) -->
+    <% if user_signed_in? %>
+      <div class="mt-auto pt-3">
+        <%= link_to "Log Out", destroy_user_session_path, 
+            class: "btn btn-outline-danger btn-lg rounded-pill archivo mt-5 w-100 fw-600", 
+            data: { turbo_method: :delete } %>
+      </div>
+        <% end %>
+      </div>
+      </ul>
+</div>
   </div>
 </nav>
